--- a/app/views/products/product_view.html.erb
+++ b/app/views/products/product_view.html.erb
@@ -1,14 +1,22 @@
-<h1>All the available products!</h1>
-<div class="container">
-  <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-md-4">
-        <h2><%= product.name %></h2>
-        <p>Price: $<%= product.price %></p>
-        <p>Description: <%= product.description %></p>
-        <p>Quantity Available: <%= product.quantity %></p>
+<div class="container center-block">
+  <h1>All the available products!</h1>
+    <% @products.each_slice(3) do |products| %>
+      <div class="row">
+        <% products.each do |product| %>
+            <div class="col-md-4">
+              <h2><%= product.name %></h2>
+              <img src=<%= product.image %>>
+              <p>Price: $<%= product.price %></p>
+              <p>Description: <%= product.description %></p>
+              <p>Quantity Available: <%= product.quantity %></p>
+            </div>
+        <% end %>
       </div>
-    <% end %>  
+    <% end %>
+          
+  <<!-- div class="row">
+    <%# @products.each do |product| %>
+    <%# end %>  
     </div>
-  </div>
+  </div> -->
 </div>
