--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,13 +2,21 @@
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-      <h1>This is the showpage for: <%= @product.name %></h1>
-      <p>It is described as: <%= @product.description %></p>
-      <p>Currently it is selling for: <%= @product.price %></p>
-      <p>Here is a picture of it:</p>
-      <img src="<%= @product.image %>" alt="<%= @product.description %>">
-      <br />
-      <a href="/products"><button type="btn-primary" class="btn btn-primary">All products</button></a>
+      <div class="well">
+        <h1><%= @product.name %></h1>
+        <p>Description: <%= @product.description %></p>
+        <p>Current Price: $<%= @product.price %></p>
+        <p>Here is a picture of it:</p>
+        <img src="<%= @product.image %>" alt="<%= @product.description %>">
+        <br />
+        <a href="/products/<%= @product.id %>/edit"><button type="btn-primary" class="btn btn-primary">Edit Product</button></a>
+        <%= button_to "Delete Product", "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger" %>
+        <a href="/products"><button type="btn-primary" class="btn btn-success">All products</button></a>
+        <%# form_tag "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"} do %>
+          <!-- <input type="submit" value="Delete Product"> -->
+        <%# end %>
+        <%# link_to "Delete Product", "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"} %>
+      </div>
     </div>
     <div class="col-md-3"></div>
   </div>
