--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,49 +1,57 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3"></div> 
-    <div class="col-md-6">       
-      <h1>Use this page to edit a product</h1>
-          <%= form_tag "/products/#{@product.id}", method: :patch do %>
-            <form class="form-horizontal">
-              <div class="form-group">
-                <label class="control-label col-md-2" for="name">Name:</label>  
-                <div class="col-md-10">
-                  <input type="text" name="name" value="<%= @product.name %>">
+    <div class="col-md-6"> 
+      <div class="well">      
+        <h1>Use this page to edit a product</h1>
+            <%= form_tag "/products/#{@product.id}", method: :patch do %>
+              <form class="form-horizontal">
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="name">Name:</label>  
+                  <div class="col-md-10">
+                    <input type="text" name="name" value="<%= @product.name %>">
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label class="control-label col-md-2" for="price">Price:</label>
-                <div class="col-md-10">
-                  <input type="text" name="price" value="<%= @product.price %>">
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="price">Price:</label>
+                  <div class="col-md-10">
+                    <input type="text" name="price" value="<%= @product.price %>">
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label class="control-label col-md-2" for="image">Image Link:</label>
-                <div class="col-md-10">
-                  <input type="text" name="image" value="<%= @product.image %>">
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="rating">Rating:</label>
+                  <div class="col-md-10">
+                    <input type="text" name="rating" value="<%= @product.rating %>">
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label class="control-label col-md-2" for="description">Description:</label>
-                <div class="col-md-10">
-                  <input type="text" name="description" value="<%= @product.description %>">
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="image">Image Link:</label>
+                  <div class="col-md-10">
+                    <input type="text" name="image" value="<%= @product.image %>">
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label class="control-label col-md-2" for="quantity">Quantity:</label>
-                <div class="col-md-10">
-                  <input type="text" name="quantity" value="<%= @product.quantity %>">
+                <!-- <div class="form-group"> -->
+                  <!-- <label class="control-label col-md-2" for="description">Description:</label> -->
+                  <!-- <div class="col-md-10"> -->
+                    <textarea name="description" rows=10 value="<%= @product.description %>" placeholder="Description of Product"></textarea>
+                  <!-- </div> -->
+                <!-- </div> -->
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="quantity">Quantity:</label>
+                  <div class="col-md-10">
+                    <input type="text" name="quantity" value="<%= @product.quantity %>">
+                  </div>
                 </div>
-              </div>
-              <input class="btn btn-primary" type="submit" value="Update Product">
-          </form>
-        <% end %>
-      <%# form_tag "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"} do %>
-        <!-- <input type="submit" value="Delete Product"> -->
-      <%# end %>
-        <%= button_to "Delete Product", "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger" %>
-        <a href="/products"><button type="btn-primary" class="btn btn-success" style="width: 100%">All products</button></a>
-        <%# button_to "All Products", "/products" class: "btn btn-success" %>
+                <input class="btn btn-primary" type="submit" value="Update Product">
+            </form>
+          <% end %>
+        <%# form_tag "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"} do %>
+          <!-- <input type="submit" value="Delete Product"> -->
+        <%# end %>
+          <%= button_to "Delete Product", "/products/#{@product.id}", method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger" %>
+          <a href="/products"><button type="btn-primary" class="btn btn-success" style="width: 100%">All products</button></a>
+          <%# button_to "All Products", "/products" class: "btn btn-success" %>
+        </div>
       </div>
     <div class="col-md-3"></div>
   </div>
