--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -30,6 +30,12 @@
                 </div>
               </div>
               <div class="form-group">
+                <label class="control-label col-md-2" for="rating">Rating:</label>
+                <div class="col-md-10">
+                  <input type="text" name="rating" placeholder="1-5">
+                </div>
+              </div>
+              <div class="form-group">
                 <label class="control-label col-md-2" for="quantity">Quantity:</label>
                 <div class="col-md-10">
                   <input type="text" name="quantity" placeholder="Quantity Available">
