--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -77,7 +77,7 @@ $dropDown       : true;
 body {
   background-image: url('weather.png');
   padding-top: 70px;
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  // font-family: Copperplate, "Copperplate Gothic Light", fantasy;
   
 }
 
