--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,14 @@
       </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <%= form_tag "/products/search", method: :post do %>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                <input type="text" class="form-control" name="search" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+          <% end %>
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
             <!-- <li class="active"><a href="/products">Home</a></li> -->
@@ -46,18 +54,19 @@
             <!-- <li><a href="/products/new">Add Product</a></li> -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li> -->
+            <!-- <li><a href="#">Link</a></li>-->
             <li class="<%= 'active' if request.path == '/products' %>"><a href="/products">Home</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort By <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li class=""><a href="/products/?sort=lowest">Sort By Lowest Price</a></li>
+                <li class=""><a href="/products/?sort=highest">Sort By Highest Price</a></li>
+                <li class=""><a href="/products/?sort=discount">Discounted Items</a></li>
+                 <li class=""><a href="/products/random">Random Item</a></li>
+                <li role="separator" class="divider"></li>
+                <!-- <li><a href="#">Separated link</a></li>--> -->
+              </ul>
+            </li>
             <li class="<%= 'active' if request.path.include?('new') %>"><a href="/products/new">Add Product</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
