--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
       <div class="row equal">
         <% products.each do |product| %>
             <div class="col-md-4">
-              <div class="well">
+              <div class="well show_well">
                 <a href="/products/<%= product.id %>"><h2> <%= product.name %></h2></a>
                 <img src=<%= product.image %>>
                 <p>Price: <span><%= number_to_currency(product.price) %></span></p>
