--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,16 @@
       </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <%= form_tag "/products/search", method: :post do %>
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                <input type="text" class="form-control" name="search" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-          <% end %>
+          <!-- <div class="search-nav" style="width: 150px;">
+            <%= form_tag "/products/search", method: :post do %>
+              <form class="navbar-form navbar-left">
+                  <div class="form-group">
+                  <input type="text" class="form-control" name="search" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+            <% end %>
+          </div> -->
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
             <!-- <li class="active"><a href="/products">Home</a></li> -->
