--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3"></div> 
     <div class="col-md-6"> 
-      <div class="well">      
+      <div class="well show_well">      
         <h1>Use this page to edit a product</h1>
             <%= form_tag "/products/#{@product.id}", method: :patch do %>
               <form class="form-horizontal">
@@ -40,6 +40,19 @@
                   <label class="control-label col-md-2" for="quantity">Quantity:</label>
                   <div class="col-md-10">
                     <input type="text" name="quantity" value="<%= @product.quantity %>">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="supplier_id">Supplier ID:</label>
+                  <div class="col-md-4">
+                    <input type="text" name="supplier" value="<%= @product.supplier.id %>">
+                  </div>
+                  <div class="col-md-6">
+                    <ol>
+                      <% @suppliers.each do |supplier| %>
+                        <li><%= supplier.name %></li>
+                      <% end %>
+                    </ol>
                   </div>
                 </div>
                 <input class="btn btn-primary" type="submit" value="Update Product">
