--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3"></div>
       <div class="col-md-6"> 
-        <div class="well">
+        <div class="well show_well">
           <h1>Use this page to create a new product</h1>
             <%= form_tag "/products", method: :post do %>
               <form class="form-horizontal">
@@ -40,6 +40,19 @@
                   <label class="control-label col-md-2" for="quantity">Quantity:</label>
                   <div class="col-md-10">
                     <input type="text" name="quantity" placeholder="Quantity Available">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="control-label col-md-2" for="supplier">Supplier ID:</label>
+                  <div class="col-md-5">
+                    <input type="text" name="supplier_id" placeholder="Select a number from the right">
+                  </div>
+                  <div class="col-md-5">
+                    <ol>
+                      <% @suppliers.each do |supplier| %>
+                        <li><%= supplier.name %></li>
+                      <% end %>
+                    </ol>
                   </div>
                 </div>
                 <input type="submit" value="Enter New Product">
