--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,66 +1,1 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-3"></div>
-      <div class="col-md-6"> 
-        <div class="well show_well">
-          <h1>Use this page to create a new product</h1>
-            <%= form_tag "/products", method: :post do %>
-              <form class="form-horizontal">
-                <div class="form-group">
-                  <label class="control-label col-md-2" for="name">Name:</label>  
-                  <div class="col-md-10">
-                    <input type="text" name="name" placeholder="Name">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-md-2" for="price">Price:</label>
-                  <div class="col-md-10">
-                    <input type="text" name="price" placeholder="Price">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-md-2" for="image">Image Link:</label>
-                  <div class="col-md-10">
-                    <input type="text" name="image" placeholder="Image URL">
-                  </div>
-                </div>
-                <!-- <div class="form-group"> -->
-                  <!-- <label class="control-label col-md-2" for="description">Description:</label> -->
-                  <!-- <div class="col-md-10"> -->
-                    <textarea name="description" placeholder="Description" rows=10></textarea>
-                  <!-- </div> -->
-                <!-- </div> -->
-                <div class="form-group">
-                  <label class="control-label col-md-2" for="rating">Rating:</label>
-                  <div class="col-md-10">
-                    <input type="text" name="rating" placeholder="1-5">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-md-2" for="quantity">Quantity:</label>
-                  <div class="col-md-10">
-                    <input type="text" name="quantity" placeholder="Quantity Available">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-md-2" for="supplier">Supplier ID:</label>
-                  <div class="col-md-5">
-                    <input type="text" name="supplier_id" placeholder="Select a number from the right">
-                  </div>
-                  <div class="col-md-5">
-                    <ol>
-                      <% @suppliers.each do |supplier| %>
-                        <li><%= supplier.name %></li>
-                      <% end %>
-                    </ol>
-                  </div>
-                </div>
-                <input type="submit" value="Enter New Product">
-            </form>
-              <% end %>
-            <a href="/products"><button type="btn-primary" class="btn btn-primary">All products</button></a>
-          </div>
-      </div>
-      <div class="col-md-3"></div>
-    </div>
-  </div>
+<%= render "form", form_method: :post, url: "/products", heading: "Use this form to add a new product.", submit_message: "Add Product" %>
